--- a/app.json
+++ b/app.json
@@ -36,6 +36,10 @@
       "description": "Banned Unwanted members..",
       "value": "",
       "required": false
+    },
+    "UPDATE_CHANNEL": {
+      "description": "For Force Subscribe. Paste your Update channel USERNAME (without @)..",
+      "value": ""
     }
   },
   "addons": [
